--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
+    implementation 'com.android.volley:volley:1.1.1'
+
 
 }
