añadimos activites nuevas en el workflow, realizamos cambios en la estetica de la aplicaicón, limpiamos código y realizamos cambios en laas activities.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.desarrollocometaapp">
+    package="com.example.desarrollocometaapp" >
 
     <uses-permission android:name="android.permission.CAMERA" />
 
@@ -15,11 +15,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".Views.CompraRealizada"></activity>
-        <activity android:name=".Views.ManualActivity"></activity>
-        <activity android:name=".Views.ScannedActivity"></activity>
-        <activity android:name=".Views.SplashScreen">
+        android:theme="@style/AppTheme" >
+        <activity android:name=".Views.RealizandoCompra" >
+        </activity>
+        <activity android:name=".Views.ErrorEnCompra" />
+        <activity android:name=".Views.CompraRealizada" />
+        <activity android:name=".Views.ManualActivity" />
+        <activity android:name=".Views.ScannedActivity" />
+        <activity android:name=".Views.SplashScreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,8 +30,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".Auth.NewAccount" />
-        <activity android:name=".Auth.Login"></activity>
-        <activity android:name=".Views.MainActivity"></activity>
+        <activity android:name=".Auth.Login" />
+        <activity android:name=".Views.MainActivity" />
         <activity
             android:name=".Classes.CaptureAct"
             android:screenOrientation="fullSensor"
